Exp-2/output/hf-eval-data-v3/f00162_audio_classification.err
  File "./f00162_audio_classification.py", line 24
    print(f'Speaker identity for {audio_file['file']}: {speaker_identity}')
                                              ^
SyntaxError: invalid syntax
